--- a/informatica/instalacao.html
+++ b/informatica/instalacao.html
@@ -1,1 +1,70 @@
-instalacao
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <title>Informática - Jorge Souza</title>
+  <link rel="stylesheet" href="../css/index.css">
+  <script src="../javascript/index.js"></script>
+  <script src="info.js"></script>
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+  <meta name="description" content="O que é um computador">
+  <meta name="keywords"
+    content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+<side-bar-left></side-bar-left>
+
+
+<div class="js-page">
+
+  <div class="js-post">
+    <a href="/informatica/nuvem.html" class="js-button">Anterior</a>
+    <a href="/informatica/msdefender.html" class="js-button" style="float: right;">Próximo</a>
+
+<!-- #region    ============    POST    ===================   -->
+
+
+<h1>Instalação e Desinstalação de Aplicativos</h1>
+<p>	No começo da apostila vimos como instalar aplicativos da Microsoft Store, que funciona basicamente como a instalação de aplicativos no celular. Mas atualmente a maioria dos programas que utilizamos no computador são instalados usando um pacote de instalação, vamos ver agora como funciona esse processo.
+<p>	Vale lembrar que o Windows caminha para um processo de conversão da instalação por pacotes .exe ou .msi para a instalação de aplicativos pela loja num futuro não muito distante, então é bom que estejamos sempre de olho na loja para ver se o programa que necessitamos já não está disponível por lá. A loja é uma novidade recente e foi lançada junto com o Windows 10.
+<h2>Painel de Controle</h2>
+<p>	Antes de tudo, a lista de programas instalados por pacotes de instalação está disponível no Painel de Controle em Programas e Recursos. Existem três formas básicas de acessá-lo.
+<p>	A forma mais comum é clicar no menu iniciar e digitar “Painel de Controle”, em seguida procurar por Programas e Recursos → Desinstalar um Programa, ou Programas → Desinstalar um Programa.
+<p>	A segunda forma é utilizar o atalho ⊞+R e digitar “control” e pressionar Enter. Logo depois, seguir as mesmas etapas anteriores.
+<p>	A terceira forma é abrir uma janela do Explorador de Arquivos (⊞+E) e na Barra de Endereços digitar:
+<p>“Painel de Controle\Programas\Programas e Recursos”
+<p>	Você verá uma lista com os programas instalados no computador, que não inclui os programas padrão do Windows.
+<p>	Para desinstalar um programa basta clicar sobre o mesmo na lista e selecionar Desinstalar. Cada programa terá suas próprias etapas de desinstalação.
+<p>	A instalação de programas é feita por um pacote que pode ter a extensão .exe ou .msi. Vamos instalar um aplicativo para treinar.
+<p>Entre no site a seguir:</p>
+<a class="js-button" href="https://www.microsoft.com/pt-br/bing/bing-wallpaper" target="_blank">https://www.microsoft.com/pt-br/bing/bing-wallpaper</a>
+
+<p>1. O aplicativo que instalaremos atualizará nossa tela de fundo da Área de Trabalho diariamente com belas imagens de cidades e da natureza retiradas da internet. Ao entrar no site clique em Download, ou Instalar. Salve o arquivo em sua Área de Trabalho.
+<p>2. Vá até a Área de Trabalho e dê um duplo-clique sobre o arquivo para abri-lo. Note a extensão .exe ao final do arquivo.
+
+<p>	Este programa é simples e não possui várias etapas de instalação. A maioria dos programas possui instruções durante a instalação, basta lermos com atenção e segui-las alterando o que for preciso de acordo com nossa necessidade. Alguns programas ao final da instalação perguntam ao usuário se quer iniciá-lo.
+<p>	Agora vá até o Painel de Controle e veja que o Bing Wallpaper já aparece na lista.
+<h2>Atualizações e Recursos</h2>
+<p>	No Painel de Controle temos acesso a duas opções que podem ser úteis de acordo com a necessidade, que são:
+
+<p>Exibir atualizações instaladas: Esta opção permite ao usuário verificar e até desinstalar atualizações baixadas recentemente pelo Windows Updater. Essa opção pode ser útil no caso de uma atualização problemática ou que tenha entrado em conflito com o computador, é possível desinstalá-la e aguardar a correção.
+<p>	Para verificar o processo de atualização do Windows entre nas configurações do computador e selecione Atualização e Segurança.
+
+<p>Ativar ou desativar recursos do Windows: Esta opção permite ao usuário instalar e desinstalar alguns recursos como versões legadas do Internet Explorer e do Edge, do Windows Media Player, e diversos outros recursos. É aconselhável que ao desativar algum recurso da lista pesquise bem sobre ele para não desinstalar algo fundamental para o funcionamento do computador ou para o que você precisa. 
+
+
+<!-- #endregion -->
+
+
+  </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
+
