--- a/informatica/msdefender.html
+++ b/informatica/msdefender.html
@@ -1,1 +1,69 @@
-msdefender
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <title>Informática - Jorge Souza</title>
+  <link rel="stylesheet" href="../css/index.css">
+  <script src="../javascript/index.js"></script>
+  <script src="info.js"></script>
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+  <meta name="description" content="O que é um computador">
+  <meta name="keywords"
+    content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+<side-bar-left></side-bar-left>
+
+
+<div class="js-page">
+
+  <div class="js-post">
+    <a href="/informatica/instalacao.html" class="js-button">Anterior</a>
+    <a href="/informatica/taskmgr.html" class="js-button" style="float: right;">Próximo</a>
+
+<!-- #region    ============    POST    ===================   -->
+
+<h1>Microsoft Defender</h1>
+<p>	O Microsoft Defender é o antivírus padrão do Windows, é um antivírus confiável e poderoso e que conta com atualizações de segurança frequentes.
+<p>	Para acessar a central de segurança do antivírus clique em Configurações no menu Iniciar e selecione Segurança do Windows.
+<p>	Assim que a central de segurança abrir você verá na tela inicial alguns itens que devem ter um sinal verde de verificação. Se algum deles apresentar um sinal vermelho com um X clique para ver as opções de correção.
+<p>	Podemos checar se a segurança do Windows requer alguma atenção especial clicando através da área de notificações, como mostrado na imagem abaixo.
+
+<img src="msdefender1.png" alt="">
+
+<p>	Quando o antivírus ou algum módulo de segurança do Windows está desativado, desinstalado, desatualizado ou com algum outro problema, um alerta aparece na central de segurança como mostrado abaixo.
+
+<img src="msdefender2.png" alt="">
+
+<p>	O básico para manter o computador seguro é mantê-lo atualizado e com o antivírus ativado, mas caso encontremos algum problema podemos executar uma verificação. Existem três opções básicas, vejamos cada uma delas.
+<h2>Verificação Rápida e Verificação Completa</h2>
+<p>	Na Central de Segurança, clique em Proteção Contra Vírus e Ameaças.
+<p>	Um botão aparecerá com a opção de Verificação Rápida. A verificação rápida costuma demorar alguns minutos apenas e verifica somente as pastas onde os vírus costumam ser encontrados.
+<p>	Clicando em Opções de Verificação, encontraremos além da verificação rápida as opções: Verificação Completa, Verificação Personalizada e Verificação Offline.
+<p>	A Verificação Completa verifica todos os arquivos e pastas no computador em busca de ameaças e costuma demorar mais tempo a depender da quantidade de arquivos e da capacidade de processamento do computador.
+<p>	A verificação personalizada permite definir qual ou quais pastas queremos verificar, e pode ser útil para verificarmos uma unidade externa como um pen-drive.
+<p class="notas">	É possível verificar uma pasta, arquivo ou dispositivo externo diretamente no Explorador de Arquivos clicando com o botão direito do mouse sobre o item que queremos verificar e escolhendo “Verificar com o Microsoft Defender”.</p>
+<h2>Verificação Offline</h2>
+<p>	Algumas ameaças conseguem se esconder no Windows, e até mesmo desativar ou impedir o antivírus, para isso podemos utilizar a Verificação Offline. Esse tipo de verificação é comumente utilizado em computadores muito infectados. A Verificação Offline reinicia o computador e efetua uma varredura no sistema antes do Windows ser inicializado para que possa reconhecer a ameaça antes que ela se inicie, já que assim como outros programas, os vírus só iniciam junto com o Windows.
+<h2>Quarentena e Exclusões</h2>
+<p>	Quando o antivírus encontra uma possível ameaça, um alerta é emitido informando ao usuário sobre a situação. Essa ameaça é então enviada à quarentena, um setor onde ela não oferece perigo ao funcionamento do computador. Na quarentena os arquivos aguardam que o usuário os restaure ou remova-os, para tal, essa ameaça constará no histórico de proteção do antivírus. Basta acessarmos, e selecionar remover, caso seja uma ameaça real ou restaurar caso seja um falso positivo.
+<p>	Quando o antivírus reconhece como ameaça um arquivo que temos certeza não representar ameaça nenhuma, isso se chama falso positivo, para continuarmos utilizando este arquivo ou programa devemos incluí-lo na lista de exclusões, que são arquivos que o antivírus não verificará.
+<p class="notas">É preciso tomar cuidado ao incluir um arquivo na lista de exclusões. Antes de fazer isso sugiro que pesquise bem sobre o arquivo para saber que riscos ele pode oferecer.</p>
+
+
+
+<!-- #endregion -->
+
+
+  </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
+
