--- a/informatica/saude.html
+++ b/informatica/saude.html
@@ -1,1 +1,51 @@
-saude
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <title>Informática - Jorge Souza</title>
+  <link rel="stylesheet" href="../css/index.css">
+  <script src="../javascript/index.js"></script>
+  <script src="info.js"></script>
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+  <meta name="description" content="O que é um computador">
+  <meta name="keywords"
+    content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+<side-bar-left></side-bar-left>
+
+
+<div class="js-page">
+
+  <div class="js-post">
+    <a href="/informatica/taskmgr.html" class="js-button">Anterior</a>
+    <a href="/informatica/limpezadisco.html" class="js-button" style="float: right;">Próximo</a>
+
+<!-- #region    ============    POST    ===================   -->
+
+<h1>Saúde do Computador</h1>
+<p>	Parece estranho falar em saúde do computador, mas é algo comum para quem está familiarizado com a informática. Acontece que um computador é um conjunto enorme de tarefas e configurações que estão em constante alteração. Só para se ter ideia, a maioria das informações que o computador trabalha são excluídas constantemente, e sempre que desligamos o computador uma grande quantidade de dados é liberada. Algumas alterações costumam permanecer sem necessidade, enquanto outras alterações seriam necessárias em certo momento de serem feitas manualmente. Desligamentos inesperados, quedas de energia, softwares mal instalados, vírus entre outras coisas podem causar problemas no sistema operacional e até corrompimento do disco. Tudo isso interfere na saúde do computador.
+<p>	Alguns hábitos auxiliam a manter um computador seguro e limpo, são recursos assim que veremos nos próximos capítulos.
+<p>	Algo muito comum é o acúmulo de lixo virtual no computador, e não falo dos arquivos que estão na lixeira, mas de restos de programas, arquivos temporários, arquivos de atualização e downloads etc.
+<p>	Cinco pastas são fundamentais para entendermos esses arquivos que se acumulam: A pasta de Downloads do usuário, as duas pastas Temp, uma localizada no diretório do Windows e a outra no diretório do usuário, a pasta SoftwareDistribution e a pasta Prefetch.
+<p>	As pastas Temp guardam arquivos temporários dos programas que são abertos. É possível esvaziar essa pasta, no entanto se houver programas abertos pode ocorrer que um deles dê algum erro.
+<p>	A pasta SoftwareDistribution\Download armazena os arquivos de atualização do Windows e pode ser esvaziada desde que o computador não esteja atualizando ou aguardando uma reinicialização após atualizar.
+<p>	A pasta Prefetch serve como backup para os programas e auxilia o Windows a inicializar mais rápido, uma vez esvaziada o computador demorará um pouco mais para iniciar da próxima vez.
+<p>	Limpar essas pastas de vez em quando melhorará consideravelmente o desempenho do computador. Mais à frente veremos como criar um programinha para fazer este serviço.
+
+
+<!-- #endregion -->
+
+
+  </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
+
