--- a/informatica/taskmgr.html
+++ b/informatica/taskmgr.html
@@ -1,1 +1,60 @@
-taskmgr
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <title>Informática - Jorge Souza</title>
+  <link rel="stylesheet" href="../css/index.css">
+  <script src="../javascript/index.js"></script>
+  <script src="info.js"></script>
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+  <meta name="description" content="O que é um computador">
+  <meta name="keywords"
+    content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+<side-bar-left></side-bar-left>
+
+
+<div class="js-page">
+
+  <div class="js-post">
+    <a href="/informatica/msdefender.html" class="js-button">Anterior</a>
+    <a href="/informatica/saude.html" class="js-button" style="float: right;">Próximo</a>
+
+<!-- #region    ============    POST    ===================   -->
+
+<h1>Gerenciador de Tarefas</h1>
+<p>	O Gerenciador de Tarefas permite verificar todos os aplicativos e serviços rodando atualmente no Windows.
+<p>	Para acessar o Gerenciador de Tarefas clique com o botão direito do mouse sobre a Barra de Tarefas e escolha Gerenciador de Tarefas. Se for a primeira vez que acessa clique em Mais Detalhes.
+<p>	Na guia Processos podemos ver todos os programas em execução no momento, alguns programas possuem mais de um processo, podemos verificar todos os processos de determinado programa expandindo sua lista ao clicar na seta em frente ao nome.
+<p>	Para finalizar um programa basta clicar com o botão direito sobre o nome e selecionar “Finalizar Tarefa”.
+<p>	Podemos classificar a lista de programas por nome ou com base no uso de memória, CPU, disco, etc., apenas clicando nos títulos das listas.
+<p>	A guia Desempenho mostra as estatísticas em tempo real de uso de CPU, memória, internet e disco.
+<p>	Na guia Inicializar podemos verificar quais programas estão marcados para iniciar junto com o Windows e habilitá-los ou desabilitá-los.
+<p>	A guia Detalhes é outra bastante útil, nela podemos verificar cada processo em execução separadamente, lembrando que vários processos podem fazer parte de uma tarefa em comum, isso porque ao abrir um programa ele pode iniciar vários processos de uma vez. Então ao encerrarmos um processo pode ser que outros sejam encerrados automaticamente.
+<p>	Para encerrar um processo basta clicar com o botão direito do mouse e selecionar “Finalizar Tarefa”.
+<p>	A lista de processos organiza-os por nome da imagem, que pode ser diferente do nome do programa em questão.
+<p>	Na guia Detalhes podemos verificar o consumo de memória e de disco de cada processo.
+<p>	Para ver mais detalhes sobre um processo você pode clicar com o botão direito do mouse sobre ele e selecionar Propriedades.
+<p>	Para encontrar o local onde este processo está salvo ou instalado você pode clicar com o botão direito do mouse e selecionar “Abrir local do arquivo”.
+<p class="notas">Muitos dos processos exibidos no Gerenciador de Tarefas fazem parte do sistema operacional e se encerrados podem comprometer o funcionamento ou até desligar o computador. Ao reiniciar o computador estes processos são iniciados novamente.</p>
+<p class="notas">Ao encerrar um processo que faça parte de um programa aberto você pode perder um trabalho não salvo.</p>
+<p class="notas">É possível encerrar um programa que travou pelo Gerenciador de Tarefas encontrando-o na guia Detalhes.</p>
+<p class="notas">Caso tenha dúvidas sobre um processo em execução você pode pesquisar pelo nome da imagem na internet para saber do que se trata.</p:
+
+
+<!-- #endregion -->
+
+
+  </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
+
