--- a/informatica/raiz.html
+++ b/informatica/raiz.html
@@ -1,1 +1,53 @@
-raiz
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <title>Informática - Jorge Souza</title>
+  <link rel="stylesheet" href="../css/index.css">
+  <script src="../javascript/index.js"></script>
+  <script src="info.js"></script>
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+  <meta name="description" content="O que é um computador">
+  <meta name="keywords"
+    content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+<side-bar-left></side-bar-left>
+
+
+<div class="js-page">
+
+  <div class="js-post">
+    <a href="/informatica/restauracao.html" class="js-button">Anterior</a>
+    <a href="/informatica/log.html" class="js-button" style="float: right;">Próximo</a>
+
+<!-- #region    ============    POST    ===================   -->
+
+<h1>A Pasta Raiz</h1>
+<p>	O diretório raiz do sistema operacional é o Disco Local C:, para acessá-lo basta digitar C: na barra de endereços no Explorador de Arquivos.
+<p>	Dentro do diretório raiz temos algumas pastas que são importantes para o funcionamento do computador, como a pasta Windows, que contém o sistema operacional, a pasta Usuários, que contém os arquivos pessoais de cada usuário cadastrado no computador, e as pastas Arquivos de Programas e Arquivos de Programas (x86), que contém todos os programas instalados tanto para a versão 64 bits (x64) quanto os programas de 32 bits (x86).
+<p>	Vale ressaltar que os programas não utilizam apenas as suas respectivas pastas de arquivos, mas várias outras, por isso não basta excluir a pasta em que ele está instalado para removê-lo do computador, é preciso fazer a desinstalação adequada. 
+<p>	Vejamos um pouco sobre estas pastas:
+<h2>A pasta Arquivos de Programas</h2>
+<p>	Num computador teremos dois tipos de arquivos, os pessoais que são criados ou salvos por nós e os arquivos do sistema e de programas, que são gerados pelo sistema operacional ou pelos programas no momento da instalação, enquanto o primeiro tipo podemos modificar ou excluir manualmente pelo explorador de arquivos, o segundo só deve ser modificado ou removido utilizando as ferramentas adequadas.
+<p>	No diretório raiz (C:), o sistema operacional fica armazenado na pasta Windows, esta pasta está em constante modificação, de acordo com as modificações que fazemos em nosso computador, essas modificações resultam ainda em registros que podem ser acessados pelo Editor de Registros, e ainda geram eventos que podem ser verificados pelo Log de Eventos. O mesmo acontece com os arquivos dos programas que instalamos, e que por padrão são salvos em Arquivos de Programas. Em versões de 64 bits do sistema operacional, haverá duas pastas com esse nome, isso porque os programas de 32 bits suportados pelo computador serão salvos em Arquivos de Programas(x86).
+<h2>A Pasta do Usuário</h2>
+<p>	Já os arquivos de usuário, que são salvos por quem está utilizando o computador, ficam localizados na pasta Usuários, que contém os perfis dos usuários cadastrados para utilizar o computador. Você pode cadastrar contas de usuário em Iniciar → Configurações → Contas → Email e Contas.
+<p>	Cada perfil da pasta usuário possui uma pasta específica onde ficam armazenadas as pastas Documentos, Imagens, Músicas, Vídeos, Downloads, entre outras. Quando utilizamos o Explorador de Arquivos, na barra da lateral esquerda, o que temos são atalhos para essas pastas. Pela pasta Usuários, é possível acessar as pastas de outros usuários que utilizam o computador, no entanto, caso a conta a qual o perfil pertence possua uma senha, ela será solicitada. O mesmo acontece ao acessarmos uma pasta de um usuário em outro computador da rede cuja conta possua uma senha.
+
+
+<!-- #endregion -->
+
+
+  </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
+
